--- a/LeagueManager.csproj
+++ b/LeagueManager.csproj
@@ -70,6 +70,8 @@
     <Compile Include="AddPlayersActivity.cs" />
     <Compile Include="LeagueActivity.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="PlayerStats.cs" />
+    <Compile Include="RankingListView.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -84,6 +86,12 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\Players.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\MyCustomListView.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\CustomListView.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
